# mini-media-tui

./: Cargo.toml  README.md
src/: app.rs  config.rs  main.rs  media.rs  ui.rs  widgets.rs
